# rust-actix-base-project

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
src/: logger.rs  main.rs  router.rs
src/model/: mod.rs  user.rs
src/models/: mod.rs
src/repo/: mod.rs
src/router/: mod.rs  user.rs
src/service/: user.rs
