[package]
name = "rust-api-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fast_log = {version = "1.4" , features = ["lz4","zip","gzip"]}
tokio = { version = "1.17.0", features = ["full"] }
actix-web = "4"
dotenvy = "0.15.1"