[package]
name = "rust-api-base-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.17.0", features = ["full"] }
actix-web = "4"
actix-cors = "0.6"
dotenvy = "0.15.1"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4" # Used for setting DateTimes
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-actix-web = "0.5"